welcome email template for event rsvp

--- a/emailtemplates/welcome/workshop.html
+++ b/emailtemplates/welcome/workshop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Turbo 360</title>
+<title>Vertex 360</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -121,28 +121,23 @@
                                             <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">Hi {{firstName}},</td>
                                         </tr>
                                         <tr>
-                                            <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">Thanks for registering to the <strong style="color:red">{{eventName}}</strong> workshop. Please bring this email with you to verify your RSVP. Also, if you would like to follow along during the workshop, please bring a laptop computer (preferably Mac). Though it is not necessary to follow along, we feel attendees would get much more out the workshop if they did.</td>
+                                            <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">Thanks for registering to the <strong style="color:red">{{eventName}}</strong> workshop. Please bring this email with you to verify your RSVP. Also, if you would like to follow along during the workshop, please bring a laptop computer.</td>
                                         </tr>
                                         <tr>
-                                            <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">If you are working on a startup and trying to launch on online product, take a look at <a style="color:red" href="https://www.turbo360.co">Turbo 360</a>. On Turbo 360, anyone can create a fullstack, database-driven web app in minutes without any coding knowledge. All apps come configured automatically with basic features such as:
-                                            <ul>
-                                                <li>User Regsitration/Login</li>
-                                                <li>File Upload &amp; Storage</li>
-                                                <li>Email Notification</li>
-                                                <li>Blog Integration</li>
-                                                <li><a style="color:red;text-decoration:none" href="https://www.turbo360.co/features">Much More</a></li>
-                                            </ul>
-                                            Turbo is the fastest way to get from idea to working prototype for startups, hands down.
+                                            <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">If you need to launch a website for your business, startup, personal portfolio etc, take a look at <a style="color:red;text-decoration:none" href="https://www.vertex360.co">Vertex 360</a>. On Vertex 360, anyone can create a full-featured, professionally designed website in minutes without any coding knowledge. Almost all apps come configured automatically with essential features such as:
+                                              <ul>
+                                                <li>Blog</li>
+                                                <li>Email Subscriber Form</li>
+                                                <li>Social Media Links</li>
+                                                <li>Payment Integration</li>
+                                              </ul>
                                             </td>
-                                        </tr>
-                                        <tr>
-                                            <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">Further, the development process on Turbo 360 is first rate. Users are not locked into a proprietary system that holds their project "hostage" as needs grow. Apps can be redeployed on another architecture like AWS seamlesssly - in fact Turbo 360 itself is built on AWS! We welcome you try it out and provide suggestions/feedback if you have any. Join our Slack channel (email invitation sent) to do so and let us know if you have any questions.</td>
                                         </tr>
                                         <tr>
                                             <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">If you have any other questions or suggestions, you can contact me at dkwon@turbo360.co. See you at the workshop!</td>
                                         </tr>
                                         <tr>
-                                            <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">Thanks,<br /><br />Dan Kwon<br />Lead Developer<br /><a href="https://www.turbo360.co">Turbo 360</a><br />dkwon@turbo360.co</td>
+                                            <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #333;" class="padding-copy">Thanks,<br /><br />Dan Kwon<br />Lead Developer<br /><a style="color:red;text-decoration:none" href="https://www.vertex360.co">Vertex 360</a></td>
                                         </tr>
                                     </table>
                                 </td>
