--- a/public/medium/html/promo.html
+++ b/public/medium/html/promo.html
@@ -1,12 +1,54 @@
 <html>
-<head></head>
+<head>
+  <style>
+    body {
+      padding: 0px;
+      margin: 0px;
+    }
 
-<body style="padding:0px;margin:0px">
+    h2 {
+      font-size: 36px;
+      font-weight: 400;
+      margin-top: 0px;
+      font-family: sans-serif;
+    }
+
+    img {
+      max-width:200px;
+      float:right;
+      margin-left:16px;
+    }
+
+    p {
+      min-height: 170px;
+      margin-bottom: 20px;
+      line-height: 24px;
+      font-family: Arial;
+    }
+
+    #btn-learn-more {
+      text-decoration: none;
+      background: #ea2f65;
+      font-family: Arial;
+      border-radius: 3px;
+      padding: 12px;
+      color: #fff;
+    }
+  </style>
+</head>
+
+<body>
   <div style="padding:24px;background:#dedafb">
-    <h2 style="font-size:36px;font-weight:400;margin-top:0px;font-family:sans-serif">Build Your Brand</h2>
-    <img style="max-width:200px;float:right;margin-left:16px" src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI">
-    <p style="min-height:170px;margin-bottom:20px;line-height:24px;font-family:Arial">This website is hosted <em>free</em> on Vertex 360. Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
-    <a target="_blank" href="https://www.vertex360.co/" style="text-decoration:none;background:#ea2f65;padding:12px;color:#fff">Learn More</a>
+    <h2>Build Your Brand</h2>
+    <img src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI">
+    <p>
+      This website is hosted <em>free</em> on Vertex 360. Vertex 360 is a
+      platform for content creators in the modern media age. Whether you
+      manage a YouTube channel, podcast, blog, Instagram folowing, or all
+      of the above, Vertex 360 provides the best way to deliver your content
+      under a unified, coherent brand that you control.
+    </p>
+    <a id="btn-learn-more" target="_blank" href="https://www.vertex360.co/">LEARN MORE</a>
   </div>
 </body>
 </html>
