link to vertex home page

--- a/public/medium/html/promo.html
+++ b/public/medium/html/promo.html
@@ -42,7 +42,7 @@
     <h2>Build Your Brand</h2>
     <img src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI">
     <p>
-      This website is hosted <em>free</em> on Vertex 360. Vertex 360 is a
+      This website is hosted <em>free</em> on <a style="text-decoration:none;color:red" target="_blank" href="https://www.vertex360.co">Vertex 360</a>. Vertex 360 is a
       platform for content creators in the modern media age. Whether you
       manage a YouTube channel, podcast, blog, Instagram folowing, or all
       of the above, Vertex 360 provides the best way to deliver your content
